--- a/NBH/lib/nblibraries.properties
+++ b/NBH/lib/nblibraries.properties
@@ -26,3 +26,9 @@ libs.jpa20-persistence.displayName=Persistence (JPA 2.1)
 libs.jpa20-persistence.javadoc=\
     ${base}/jpa20-persistence/javax.persistence-2.2.1-doc.zip
 libs.jpa20-persistence.prop-maven-dependencies=org.eclipse.persistence:javax.persistence:2.2.1:jar
+libs.jsf20.classpath=\
+    ${base}/jsf20/javax.faces.jar
+libs.jsf20.displayName=JSF 2.3
+libs.jsf20.javadoc=\
+    ${base}/jsf20/javaee-doc-api.jar
+libs.jsf20.prop-maven-dependencies=org.glassfish:javax.faces:2.3.9:jar
