--- a/NBH/NBH-war/nbproject/private/private.properties
+++ b/NBH/NBH-war/nbproject/private/private.properties
@@ -7,4 +7,4 @@ j2ee.server.middleware=/Users/choijiwon/glassfish-5.1.0
 javac.debug=true
 javadoc.preview=true
 selected.browser=default
-user.properties.file=C:\\Users\\weiku\\AppData\\Roaming\\NetBeans\\12.4\\build.properties
+user.properties.file=/Users/choijiwon/Library/Application Support/NetBeans/12.5/build.properties
