--- a/NBH/NBH-war/nbproject/project.properties
+++ b/NBH/NBH-war/nbproject/project.properties
@@ -28,6 +28,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
+file.reference.primefaces-8.0.jar=/Users/choijiwon/Downloads/primefaces-8.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -46,7 +47,7 @@ javac.classpath=\
     ${libs.javaee-api-8.0.classpath}:\
     ${libs.jsf20.classpath}:\
     ${libs.jpa20-persistence.classpath}:\
-    ${libs.PrimeFaces_8.0.classpath}
+    ${file.reference.primefaces-8.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
