--- a/NBH/nbproject/private/private.properties
+++ b/NBH/nbproject/private/private.properties
@@ -7,5 +7,5 @@ j2ee.server.domain=/Users/choijiwon/glassfish-5.1.0/glassfish/domains/domain1
 j2ee.server.home=/Users/choijiwon/glassfish-5.1.0/glassfish
 j2ee.server.instance=[/Users/choijiwon/glassfish-5.1.0/glassfish:/Users/choijiwon/glassfish-5.1.0/glassfish/domains/domain1]deployer:gfv510ee8:localhost:4848
 j2ee.server.middleware=/Users/choijiwon/glassfish-5.1.0
-netbeans.user=C:\\Users\\weiku\\AppData\\Roaming\\NetBeans\\12.4
+netbeans.user=/Users/choijiwon/Library/Application Support/NetBeans/12.5
 wa.copy.client.jar.from=/Users/choijiwon/glassfish-5.1.0/glassfish/domains/domain1/generated/xml
