--- a/NBH/NBH-war/nbproject/private/private.properties
+++ b/NBH/NBH-war/nbproject/private/private.properties
@@ -1,10 +1,10 @@
-deploy.ant.properties.file=C:\\Users\\weiku\\AppData\\Roaming\\NetBeans\\12.4\\config\\GlassFishEE6\\Properties\\gfv3207117227.properties
-file.reference.primefaces-8.0.jar=C:\\Users\\weiku\\OneDrive\\Desktop\\primefaces-8.0.jar
+deploy.ant.properties.file=/Users/choijiwon/Library/Application Support/NetBeans/12.5/config/GlassFishEE6/Properties/gfv3363455328.properties
+file.reference.primefaces-8.0.jar=/Users/choijiwon/Downloads/primefaces-8.0.jar
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/glassfish-5.1.0/glassfish/domains/domain1
-j2ee.server.home=C:/glassfish-5.1.0/glassfish
-j2ee.server.instance=[C:\\glassfish-5.1.0\\glassfish;C:\\glassfish-5.1.0\\glassfish\\domains\\domain1]deployer:gfv510ee8:localhost:4848
-j2ee.server.middleware=C:/glassfish-5.1.0
+j2ee.server.domain=/Users/choijiwon/glassfish-5.1.0/glassfish/domains/domain1
+j2ee.server.home=/Users/choijiwon/glassfish-5.1.0/glassfish
+j2ee.server.instance=[/Users/choijiwon/glassfish-5.1.0/glassfish:/Users/choijiwon/glassfish-5.1.0/glassfish/domains/domain1]deployer:gfv510ee8:localhost:4848
+j2ee.server.middleware=/Users/choijiwon/glassfish-5.1.0
 javac.debug=true
 javadoc.preview=true
 selected.browser=default
