--- a/NBH/nbproject/private/private.properties
+++ b/NBH/nbproject/private/private.properties
@@ -5,7 +5,7 @@ j2ee.appclient.tool.mainclass=org.glassfish.appclient.client.AppClientFacade
 j2ee.appclient.tool.runtime=
 j2ee.platform.is.jsr109=true
 j2ee.server.domain=/Users/macbook/glassfish-5.1.0/glassfish/domains/domain1
-j2ee.server.home=/Users/macbook/glassfish-5.1.0/glassfish
+j2ee.server.home=C:/glassfish-5.1.0/glassfish
 j2ee.server.instance=[/Users/macbook/glassfish-5.1.0/glassfish:/Users/macbook/glassfish-5.1.0/glassfish/domains/domain1]deployer:gfv510ee8:localhost:4848
 j2ee.server.middleware=/Users/macbook/glassfish-5.1.0
 netbeans.user=/Users/macbook/Library/Application Support/NetBeans/12.5
